# BackEnd_Doc

./: README.md
.github/workflows/: deploy.yml  matching-server-ci-cd.yml  matching-server-simple.yml
APIGatewayServer/: CMakelists.txt  init.ps1  rebuild.ps1  vcpkg.json
APIGatewayServer/src/: main.cpp
APIGatewayServer/src/core/: api_gateway.cpp  api_gateway.h  request_router.cpp  request_router.h  service_endpoint.h  service_registry.h
GameSocketServer/: CMakeLists.txt  README.md  install-dependencies.sh  rebuild-ninja.ps1  rebuild.ps1  rebuild.sh  vcpkg.json
GameSocketServer/DB/: init.sql
GameSocketServer/encoding/: convert-to-utf8.ps1
GameSocketServer/src/: main.cpp
GameSocketServer/src/controller/: auth_controller.cpp  auth_controller.h  controller.h  game_controller.h  room_controller.cpp  room_controller.h
GameSocketServer/src/core/: server.cpp  server.h  session.cpp  session.h
GameSocketServer/src/dto/request/: create_room_request.h  exit_room_request.h  join_room_request.h  login_request.h  register_request.h
GameSocketServer/src/dto/response/: create_room_response.h  exit_room_response.h  join_room_response.h  list_rooms_response.h  login_response.h  register_response.h
GameSocketServer/src/entity/: character_classes.h  event_types.h  game_players.h  games.h  maps.h  room.h  room_player.h  room_users.h  rooms .h  user.h  users.h
GameSocketServer/src/repository/: game_repository.h  room_repository.cpp  room_repository.h  user_repository.cpp  user_repository.h
GameSocketServer/src/service/: auth_service.cpp  auth_service.h  room_service.cpp  room_service.h
GameSocketServer/src/util/: db_pool.cpp  db_pool.h  password_util.cpp  password_util.h  session_pool.cpp  session_pool.h
GameSocketTestClient/: .gitignore  GameSocketTestClient.sln  GameSocketTestClient.vcxproj  GameSocketTestClient.vcxproj.filters  GameTestClient.cpp  README.md
GameSocketTestClient/GameSock.fd2b5e4a/x64/Debug/: GameSocketTestClient.exe.recipe  vc143.idb
GameSocketTestClient/GameSock.fd2b5e4a/x64/Debug/GameSock.fd2b5e4a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameSocketTestClient.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MatchingServer/: .gitignore  Dockerfile  Makefile  MatchingServer.vcxproj  build.sh  ci-cd-pipeline  db-init.sql  deploy-script  docker-compose.yml  init.sh  setup-docker.sh  setup.sql  vcpkg.json
MatchingServer/MatchingServer/Debug/: vc143.idb
MatchingServer/MatchingServer/Debug/MatchingServer.tlog/: MatchingServer.lastbuildstate
MatchingServer/MatchingServer/x64/Debug/: MatchingServer.exe.recipe  vc143.idb
MatchingServer/MatchingServer/x64/Debug/MatchingServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MatchingServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MatchingServer/db_init/: init.sql
MatchingServer/postgres-data/: postmaster.pid
MatchingServer/postgres-data/base/13780/: pg_internal.init
MatchingServer/postgres-data/base/16384/: 1247  1249  1259  16385  16386  16393  16395  16397  16398  16402  16404  16406  16407  16415  16422  16423  16428  16440  16450  16462  16463  16464  16465  16466  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  (+16 more)
MatchingServer/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
MatchingServer/postgres-data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
MatchingServer/src/: main.cpp
MatchingServer/src/controller/: auth_controller.cpp  auth_controller.h  game_controller.cpp  room_controller.cpp
MatchingServer/src/core/: server.cpp  server.h  session.cpp  session.h
MatchingServer/src/repository/: game_repository.cpp  game_repository.h  room_repository.cpp  room_repository.h  user_repository.cpp  user_repository.h
MatchingServer/src/service/: auth_service.cpp  auth_service.h  game_service.cpp  game_service.h  room_service.cpp
MatchingServer/src/util/: db_pool.cpp  password_util.cpp  session_pool.cpp  session_pool.h
indicator/: .gitignore  Dockerfile  build.gradle
indicator/src/main/java/com/smashup/indicator/: IndicatorApplication.java
indicator/src/main/java/com/smashup/indicator/common/config/: GlobalConstants.java  WebConfig.java
indicator/src/main/java/com/smashup/indicator/common/util/: AbstractRestController.java
indicator/src/main/java/com/smashup/indicator/module/gamerhint/repository/: GamerHintRepository.java  GamerHintRepository1.java  MatrixRepository.java  WinMatrixRepository.java
indicator/src/main/java/com/smashup/indicator/module/version/: BatchCountManager.java  BatchCountScheduler.java  CardPoolManager.java  PoolManager.java  ReadyMadeManager.java
indicator/src/main/java/com/smashup/indicator/module/version/repository/: VersionWithPoolRepository.java
indicator/src/main/resources/: application-common.yml  application-dev.yml  application-local.yml  application-prod.yml  application.properties  application.yml  log4j2-dev.xml  log4j2-local.xml  log4j2-prod.xml  log4j2-spring.xml
indicator/src/test/java/com/smashup/indicator/: IndicatorApplicationTests.java
logging/: Dockerfile  build.gradle.kts
logging/local_infra/docker-elk-main/logstash/config/: pipelines.yml
logging/local_infra/docker-elk-main/logstash/pipeline/: kafkalog.conf
logging/src/main/kotlin/com/worlcok/logging/: LoggingApplication.kt
logging/src/main/kotlin/com/worlcok/logging/config/: OpenFeignConfig.kt
logging/src/main/kotlin/com/worlcok/logging/controller/: LogApi.kt
logging/src/main/kotlin/com/worlcok/logging/controller/dto/: LogRequest.kt
logging/src/main/kotlin/com/worlcok/logging/feign/: IndicatorClient.kt
logging/src/main/kotlin/com/worlcok/logging/kafka/: KafkaConfig.kt  KafkaUtil.kt
logging/src/main/kotlin/com/worlcok/logging/service/: LogService.kt
logging/src/main/resources/: application-dev.yml  application-prod.yml
logging/src/test/kotlin/com/worlcok/logging/: LoggingApplicationTests.kt
(+34 files in other folders)
